src/test/deca/context/invalid/ContextSansObjet/Identification/intNullAssign.deca
//Description
//  Assignation d'une variable int avec null
//
//Réponse
//  Erreur contextuelle ligne 10
//  type incompatible

{
    int x;
    x = null;
}